[tool.poetry]
name = "form"
version = "0.1.0"
description = ""
authors = ["Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.6"
pdfrw = "^0.4.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"
mypy = "^0.720.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
