[tool.poetry]
name = "form"
version = "0.1.0"
description = ""
authors = ["Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.6"
pdfrw = "^0.4.0"
click = "^7.0"
aiohttp = "^3.5"
slackclient = "^2.1"
reportlab = "^3.5"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"
mypy = "^0.720.0"
